--- a/src/sass/components/_backdrop-modal.scss
+++ b/src/sass/components/_backdrop-modal.scss
@@ -21,19 +21,7 @@
   transform: translate(-50%, -50%);
   z-index: 100;
 
-  background: getColor(primary-light);
-  border: 2px solid getColor(accent);
-  border-radius: 10px;
-  padding: 32px 60px;
-
-  box-shadow: 0 3px 10px -0.5px rgba(0, 0, 0, 0.2);
-  text-align: center;
-  background-color: getColor(primary-light);
   transition: 0.3s all;
-
-  @media screen and (max-width: 767px) {
-    padding: 28px;
-  }
 }
 
 .modal.active,
@@ -42,27 +30,19 @@
   visibility: visible;
 }
 
-.modal__title {
-  font-family: 'Seymour One', sans-serif;
-  font-size: 20px;
-  line-height: calc(28 / 20);
+.locations-modal,
+.franchise-modal {
+  background: getColor(primary-light);
+  border: 2px solid getColor(accent);
+  border-radius: 10px;
+  padding: 32px 60px;
+
+  box-shadow: 0 3px 10px -0.5px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  background-color: getColor(primary-light);
 
   @media screen and (max-width: 767px) {
-    font-size: 16px;
-    line-height: calc(24 / 16) 24px;
-  }
-}
-
-.modal__text {
-  font-size: 16px;
-  line-height: calc(22 / 16);
-  margin-top: 24px;
-  text-align: justify;
-
-  @media screen and (max-width: 767px) {
-    font-size: 14px;
-    line-height: calc(20 / 14);
-    margin-top: 20px;
+    padding: 28px;
   }
 }
 
@@ -98,6 +78,30 @@
   @media screen and (max-width: 767px) {
     width: 20px;
     height: 20px;
+  }
+}
+
+.modal__title {
+  font-family: 'Seymour One', sans-serif;
+  font-size: 20px;
+  line-height: calc(28 / 20);
+
+  @media screen and (max-width: 767px) {
+    font-size: 16px;
+    line-height: calc(24 / 16) 24px;
+  }
+}
+
+.modal__text {
+  font-size: 16px;
+  line-height: calc(22 / 16);
+  margin-top: 24px;
+  text-align: justify;
+
+  @media screen and (max-width: 767px) {
+    font-size: 14px;
+    line-height: calc(20 / 14);
+    margin-top: 20px;
   }
 }
 
