--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1311,19 +1311,7 @@ button {
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 100;
-  background: #fcfcfc;
-  border: 2px solid #f8d24e;
-  border-radius: 10px;
-  padding: 32px 60px;
-  box-shadow: 0 3px 10px -0.5px rgba(0, 0, 0, 0.2);
-  text-align: center;
-  background-color: #fcfcfc;
   transition: 0.3s all;
-}
-@media screen and (max-width: 767px) {
-  .modal {
-    padding: 28px;
-  }
 }
 
 .modal.active,
@@ -1332,29 +1320,20 @@ button {
   visibility: visible;
 }
 
-.modal__title {
-  font-family: "Seymour One", sans-serif;
-  font-size: 20px;
-  line-height: 1.4;
+.locations-modal,
+.franchise-modal {
+  background: #fcfcfc;
+  border: 2px solid #f8d24e;
+  border-radius: 10px;
+  padding: 32px 60px;
+  box-shadow: 0 3px 10px -0.5px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  background-color: #fcfcfc;
 }
 @media screen and (max-width: 767px) {
-  .modal__title {
-    font-size: 16px;
-    line-height: 1.5 24px;
-  }
-}
-
-.modal__text {
-  font-size: 16px;
-  line-height: 1.375;
-  margin-top: 24px;
-  text-align: justify;
-}
-@media screen and (max-width: 767px) {
-  .modal__text {
-    font-size: 14px;
-    line-height: 1.4285714286;
-    margin-top: 20px;
+  .locations-modal,
+.franchise-modal {
+    padding: 28px;
   }
 }
 
@@ -1393,6 +1372,32 @@ button {
   .modal__cross {
     width: 20px;
     height: 20px;
+  }
+}
+
+.modal__title {
+  font-family: "Seymour One", sans-serif;
+  font-size: 20px;
+  line-height: 1.4;
+}
+@media screen and (max-width: 767px) {
+  .modal__title {
+    font-size: 16px;
+    line-height: 1.5 24px;
+  }
+}
+
+.modal__text {
+  font-size: 16px;
+  line-height: 1.375;
+  margin-top: 24px;
+  text-align: justify;
+}
+@media screen and (max-width: 767px) {
+  .modal__text {
+    font-size: 14px;
+    line-height: 1.4285714286;
+    margin-top: 20px;
   }
 }
 
