--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,4 @@
-<section class="contacts">
+<section class="contacts" id="contacts">
   <div class="contacts__container container">
     <h2 class="contacts__title visually-hidden">Contacts</h2>
     <ul class="contacts__list">
