--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -11,10 +11,12 @@
 }
 
 .footer__text {
+  margin-bottom: 60px;
   text-transform: uppercase;
   color: getColor(primary-light);
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-bottom: 32px;
     width: 352px;
   }
 
@@ -44,16 +46,19 @@
 }
 
 .footer__undertitle {
-  margin-bottom: 60px;
   font-size: 34px;
   line-height: calc(41 / 34);
   letter-spacing: 0.04em;
 
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    margin-bottom: 32px;
+  @media screen and (min-width: 768px) {
     font-size: 48px;
     line-height: calc(59 / 48);
     letter-spacing: 0.06em;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 58px;
+    line-height: calc(71 / 58);
   }
 }
 
