--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -71,6 +71,7 @@
 
   @media screen and (min-width: 1200px) {
     align-items: baseline;
+    border-bottom: getBorder(footer);
   }
 }
 
@@ -139,8 +140,10 @@
 }
 
 .footer__copyright-container {
-  border-top: getBorder(footer);
-  width: 100%;
+  @media screen and (max-width: 1199px) {
+    border-top: getBorder(footer);
+    width: 100%;
+  }
 }
 
 .footer__copyright {
