--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -1,12 +1,13 @@
 .gallery {
     margin: 0 auto;
-     padding: 0;
      background-color: transparent;
  
      position: absolute;
      top:-32px;
-     right: 0px;
+     right: 50%;
      z-index:100;
+
+     transform: translateX(50%);
 
      //tablet screen
      @media screen and (min-width: 768px) {
@@ -21,8 +22,9 @@
          margin: 0 auto;
          padding: 0px 20px;
          min-width: 320px;
-         border-radius: 8px;
+         background-color: transparent;
          overflow: hidden;
+         border-radius: 8px;
  
      //mobile screen
      @media screen and (min-width: 480px) {
@@ -50,5 +52,5 @@
            @media screen and (min-width: 1200px) {
              width: 1013px;
            }  
-         }
+         } 
      }
