--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -86,6 +86,19 @@ button {
   padding-top: 12px;
   padding-bottom: 12px;
 }
+@media screen and (min-width: 768px) {
+  .header {
+    display: flex;
+    gap: 32px;
+    align-items: center;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header {
+    justify-content: space-between;
+  }
+}
 @media screen and (max-width: 319px) {
   .header {
     width: 100wv;
@@ -107,6 +120,28 @@ button {
 }
 @media screen and (min-width: 768px) {
   .header__mobile {
+    gap: 440px;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.burger {
+  fill: #ffffff;
+  padding-left: 0;
+  padding-right: 0;
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+}
+@media screen and (min-width: 1200px) {
+  .burger {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .burger {
     gap: 440px;
     justify-content: center;
     align-items: center;
@@ -163,20 +198,38 @@ button {
   padding: 0;
 }
 
+.header__list {
+  display: flex;
+  gap: 28px;
+}
+
+.list__text {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.25;
+  color: #FCFCFC;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.list__text:hover, .list__text:focus {
+  color: #F8D24E;
+}
+
 .container-advantages {
-  padding-top: 50px;
-  padding-bottom: 32px;
+  padding-top: 25px;
+  padding-bottom: 79px;
 }
 @media screen and (min-width: 768px) {
   .container-advantages {
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding-top: 43px;
+    padding-bottom: 204px;
   }
 }
 @media screen and (min-width: 1200px) {
   .container-advantages {
-    padding-top: 65px;
-    padding-bottom: 75px;
+    padding-top: 49px;
+    padding-bottom: 200px;
   }
 }
 
@@ -233,6 +286,7 @@ button {
 }
 @media screen and (min-width: 768px) {
   .advantages-list__tittle {
+    text-transform: lowercase;
     margin-bottom: 12px;
     font-size: 48px;
     line-height: 1.2189583333;
@@ -308,7 +362,7 @@ button {
 }
 @media screen and (min-width: 1200px) {
   .advantages-list__description {
-    font-size: 16px;
+    font-size: 17px;
     line-height: 1.76;
   }
 }
@@ -1350,14 +1404,14 @@ button {
   display: flex;
   flex-direction: column;
   padding-top: 61px;
-  padding-bottom: 50px;
+  padding-bottom: 25px;
   padding-left: 20px;
-  padding-right: 20px;
+  padding-right: 21px;
 }
 @media screen and (min-width: 768px) {
   .about__container {
     padding-top: 60px;
-    padding-bottom: 60px;
+    padding-bottom: 43px;
     padding-left: 32px;
     padding-right: 34px;
   }
@@ -1365,9 +1419,9 @@ button {
 @media screen and (min-width: 1200px) {
   .about__container {
     padding-top: 60px;
-    padding-bottom: 60px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-bottom: 50px;
+    padding-left: 17px;
+    padding-right: 17px;
   }
 }
 
