--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -57,36 +57,6 @@
   }
 }
 
-.burger {
-  fill: getColor(primary-white);
-  padding-left: 0;
-  padding-right: 0;
-  display: flex;
-  align-items: center;
-  background-color: transparent;
-  border: none;
-
-  @media screen and (min-width: 1200px) {
-    display: none;
-  }
-
-  @media screen and (min-width: 768px) {
-    gap: 440px;
-    justify-content: center;
-    align-items: center;
-  }
-}
-
-.burger {
-  fill: getColor(primary-white);
-  padding-left: 0;
-  padding-right: 0;
-  display: flex;
-  align-items: center;
-  background-color: transparent;
-  border: none;
-}
-
 .header__button {
   font-weight: 600;
   font-size: 14px;
@@ -130,13 +100,12 @@
 }
 
 .header__list {
-    display: flex;
-    gap: 28px;
-}
-
-/* Коміт */
   display: flex;
   gap: 28px;
+
+  @media screen and (max-width: 1200px) {
+    display: none;
+  }
 }
 
 .list__text {
