--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -148,38 +148,6 @@ button {
   }
 }
 
-.burger {
-  fill: #ffffff;
-  padding-left: 0;
-  padding-right: 0;
-  display: flex;
-  align-items: center;
-  background-color: transparent;
-  border: none;
-}
-@media screen and (min-width: 1200px) {
-  .burger {
-    display: none;
-  }
-}
-@media screen and (min-width: 768px) {
-  .burger {
-    gap: 440px;
-    justify-content: center;
-    align-items: center;
-  }
-}
-
-.burger {
-  fill: #ffffff;
-  padding-left: 0;
-  padding-right: 0;
-  display: flex;
-  align-items: center;
-  background-color: transparent;
-  border: none;
-}
-
 .header__button {
   font-weight: 600;
   font-size: 14px;
@@ -223,6 +191,11 @@ button {
 .header__list {
   display: flex;
   gap: 28px;
+}
+@media screen and (max-width: 1200px) {
+  .header__list {
+    display: none;
+  }
 }
 
 .list__text {
