--- a/src/partials/modal-about.html
+++ b/src/partials/modal-about.html
@@ -1,18 +1,22 @@
 <div class="modal-about__window" data-modal="5">
-    <button class="modal-window__close js-modal-close" type="button">
-        <svg class="modal-window__svg" width="24" height="24">
-            <use href="./images/svg/symbol-defs.svg#close-black"></use>
-        </svg>
-    </button>
-
-    <h2 class="modal-about__title">How it's made?</h2>
-    <svg class="modal-about__svg" width="36" height="36">
-        <use href="./images/svg/symbol-defs.svg#about-svg"></use>
+<button class="modal-window__close js-modal-close" type="button">
+    <svg class="modal-window__svg" width="24" height="24">
+        <use href="./images/svg/symbol-defs.svg#close-black"></use>
     </svg>
-    <p class="modal-about__text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et Lorem
-        ipsum dolor
-        sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+</button>
+
+<h2 class="modal-about__title">How it's made?</h2>
+<iframe class="modal-about__video" width="448" height="205" src="https://www.youtube.com/embed/IDYYJmv8LJs"
+    title="YouTube video player" frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen></iframe>
+<!-- <svg class="modal-about__svg" width="36" height="36">
+    <use href="./images/svg/symbol-defs.svg#about-svg"></use>
+</svg> -->
+<p class="modal-about__text">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+    tempor incididunt ut labore et Lorem ipsum dolor sit amet, consectetur
+    adipiscing elit, sed do eiusmod tempor incididunt ut labore et
     </p>
 </div>
 
