--- a/src/sass/components/_modal-about.scss
+++ b/src/sass/components/_modal-about.scss
@@ -54,6 +54,13 @@ border-radius: 10px;
   background-color: transparent;
 }
 
+.modal-about__video {
+  @media screen and (max-width: 767px) {
+   width: 224px;
+    height: 199px;
+  }
+}
+
 .modal-window__svg {
     @media screen and (max-width: 767px) {
     width: 20px;
@@ -62,6 +69,8 @@ border-radius: 10px;
 }
 
 .modal-about__title {
+margin-bottom: 32px;
+
     font-family: 'Seymour One', sans-serif;
     font-size: 20px;
     line-height: calc(28 / 20);
@@ -73,20 +82,20 @@ border-radius: 10px;
   }
 }
 
-.modal-about__svg {
-    width: 448px;
-    height: 205px;
-    margin-top: 32px;
-    padding: 85px 98px;
-    border-radius: 10px;
-    fill: getColor('primary-white');
-    background-color: getColor('primary-black');
+// .modal-about__svg {
+//     width: 448px;
+//     height: 205px;
+//     margin-top: 32px;
+//     padding: 85px 98px;
+//     border-radius: 10px;
+//     fill: getColor('primary-white');
+//     background-color: getColor('primary-black');
 
-    @media screen and (max-width: 767px) {
-    width: 224px;
-    height: 199px;
-  }
-}
+//     @media screen and (max-width: 767px) {
+//     width: 224px;
+//     height: 199px;
+//   }
+// }
 
 .modal-about__text {
 margin-top: 32px;
