--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -2592,6 +2592,13 @@ textarea {
 }
 
 @media screen and (max-width: 767px) {
+  .modal-about__video {
+    width: 224px;
+    height: 199px;
+  }
+}
+
+@media screen and (max-width: 767px) {
   .modal-window__svg {
     width: 20px;
     height: 20px;
@@ -2599,6 +2606,7 @@ textarea {
 }
 
 .modal-about__title {
+  margin-bottom: 32px;
   font-family: "Seymour One", sans-serif;
   font-size: 20px;
   line-height: 1.4;
@@ -2608,22 +2616,6 @@ textarea {
   .modal-about__title {
     font-size: 16px;
     line-height: 1.5 24px;
-  }
-}
-
-.modal-about__svg {
-  width: 448px;
-  height: 205px;
-  margin-top: 32px;
-  padding: 85px 98px;
-  border-radius: 10px;
-  fill: #ffffff;
-  background-color: #000000;
-}
-@media screen and (max-width: 767px) {
-  .modal-about__svg {
-    width: 224px;
-    height: 199px;
   }
 }
 
