--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1112,7 +1112,6 @@ button {
 }
 
 .products-modal__window {
-  position: absolute;
   width: 280px;
   height: 991px;
   padding: 28px 28px 29px 28px;
@@ -1217,6 +1216,11 @@ button {
   width: 132px;
   height: 132px;
 }
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .products-modal_circle--green::before {
+    background-image: url(../images/products/tablet-mobile/1/1_400.png);
+  }
+}
 
 .products-modal_circle--coral {
   background: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #d9d9d9;
@@ -1234,6 +1238,11 @@ button {
   width: 132px;
   height: 132px;
 }
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .products-modal_circle--coral::before {
+    background-image: url(../images/products/tablet-mobile/3/3_400.png);
+  }
+}
 
 .products-modal_circle--yellow {
   background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #d9d9d9;
@@ -1250,6 +1259,11 @@ button {
   background-size: cover;
   width: 132px;
   height: 132px;
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .products-modal_circle--yellow::before {
+    background-image: url(../images/products/tablet-mobile/2/2_400.png);
+  }
 }
 
 .products-modal__name {
@@ -1673,6 +1687,277 @@ button {
   margin-right: 4px;
 }
 
+.ingredients__modal {
+  width: 280px;
+  height: 968px;
+  background-color: #fcfcfc;
+  border: 2px solid #f8d24e;
+  border-radius: 10px;
+  padding: 28px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .ingredients__modal {
+    width: 568px;
+    height: 996px;
+    padding: 32px 40px;
+  }
+}
+
+.ingredients__title {
+  font-family: "Seymour One", sans-serif;
+  font-size: 20px;
+  line-height: 1.4;
+  margin-bottom: 27px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .ingredients__title {
+    margin-bottom: 31px;
+  }
+}
+
+.ingredients__circle {
+  position: relative;
+  width: 132px;
+  height: 132px;
+  border-radius: 50%;
+  background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #d9d9d9;
+  box-shadow: 0px 8px 30px 0px rgba(10, 136, 23, 0.2509803922);
+  margin-bottom: 22px;
+}
+.ingredients__circle::before {
+  content: "";
+  position: absolute;
+  background-image: url(../images/info-modal/ice_132.png);
+  top: -7;
+  left: 0;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 132px;
+  height: 132px;
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .ingredients__circle::before {
+    background-image: url(../images/info-modal/ice_164.png);
+  }
+}
+
+.compounds {
+  display: flex;
+  gap: 9px;
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 768px) {
+  .compounds {
+    gap: 20px;
+    margin-bottom: 48px;
+  }
+}
+
+.compounds__item {
+  position: relative;
+  width: 53px;
+  height: 72px;
+  border: 2px solid #9cbe8f;
+  border-radius: 40px;
+  text-align: center;
+  padding-top: 52px;
+  padding-bottom: 8px;
+}
+@media screen and (min-width: 768px) {
+  .compounds__item {
+    width: 65px;
+    height: 90px;
+    padding-top: 60px;
+    padding-bottom: 15px;
+  }
+}
+
+.compounds__value {
+  position: absolute;
+  display: flex;
+  width: 43px;
+  height: 43px;
+  border-radius: 50%;
+  background-color: #9cbe8f;
+  box-shadow: 0px 8px 30px 0px rgba(10, 136, 23, 0.2509803922);
+  font-weight: 500;
+  font-size: 10px;
+  line-height: 2.8;
+  align-items: center;
+  justify-content: center;
+  left: 50%;
+  top: -2;
+  transform: translateX(-50%);
+}
+@media screen and (min-width: 768px) {
+  .compounds__value {
+    width: 53px;
+    height: 53px;
+    font-size: 12px;
+    line-height: 2.3333333333;
+  }
+}
+
+.compounds__name {
+  display: block;
+  font-size: 10px;
+  line-height: 1.2;
+}
+.compounds__name--desk {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .compounds__name {
+    font-size: 12px;
+    line-height: 1.25;
+  }
+  .compounds__name--mobile {
+    display: none;
+  }
+  .compounds__name--desk {
+    display: block;
+  }
+}
+
+.ingredients__label {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.4;
+  text-align: center;
+  margin-bottom: 24px;
+}
+
+.ingredients {
+  margin-bottom: 40px;
+  width: 100%;
+}
+
+.ingredients__item {
+  margin-bottom: 11px;
+  display: flex;
+  justify-content: space-between;
+}
+.ingredients__item:last-child {
+  margin-bottom: 0;
+}
+
+.ingredients-form__input {
+  position: relative;
+  background: rgba(248, 210, 78, 0.1);
+  border: 1px solid #84a178;
+  border-radius: 10px;
+  background: rgba(248, 210, 78, 0.1);
+  height: 42px;
+  width: 240px;
+  padding: 11px;
+  font-family: inherit;
+  font-size: 14px;
+  line-height: 1.4;
+  color: inherit;
+  resize: none;
+}
+.ingredients-form__input--comment {
+  height: 84px;
+  padding-top: 8px;
+}
+.ingredients-form__input:focus {
+  border-color: #f8d24e;
+  outline: none;
+}
+.ingredients-form__input:focus + .ingredients-form__label {
+  display: none;
+}
+.ingredients-form__input:not(:-moz-placeholder-shown) + .ingredients-form__label {
+  display: none;
+}
+.ingredients-form__input:not(:-ms-input-placeholder) + .ingredients-form__label {
+  display: none;
+}
+.ingredients-form__input:not(:placeholder-shown) + .ingredients-form__label {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .ingredients-form__input {
+    padding: 11px 16px;
+    width: 368px;
+  }
+}
+
+.ingredients-form__item {
+  position: relative;
+  margin-bottom: 16px;
+}
+.ingredients-form__item:last-child {
+  margin-bottom: 0;
+}
+@media screen and (min-width: 768px) {
+  .ingredients-form__item {
+    margin-bottom: 16px;
+  }
+}
+
+.ingredients-form__label {
+  position: absolute;
+  top: 8;
+  left: 12;
+  font-size: 12px;
+  line-height: 1.4;
+}
+@media screen and (min-width: 768px) {
+  .ingredients-form__label {
+    font-size: 14px;
+  }
+}
+
+.ingredients-form__list {
+  margin-bottom: 24px;
+}
+@media screen and (min-width: 768px) {
+  .ingredients-form__list {
+    margin-bottom: 32px;
+  }
+}
+
+.ingredients-form {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.ingredients-form__btn {
+  font-family: inherit;
+  width: 132px;
+  height: 42px;
+  background: #f8d24e;
+  border-radius: 10px;
+  border: none;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.2142857143;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.ingredients-form__btn:hover {
+  background-color: #0a8817;
+}
+.ingredients-form__btn:focus {
+  background-color: #0a8817;
+  color: #fcfcfc;
+}
+@media screen and (min-width: 768px) {
+  .ingredients-form__btn {
+    width: 121px;
+    font-size: 14px;
+  }
+}
+
 .overlay {
   opacity: 0;
   visibility: hidden;
@@ -1693,7 +1978,7 @@ button {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 100;
+  z-index: 1000;
   transition: 0.3s all;
 }
 
@@ -2533,7 +2818,7 @@ textarea {
 }
 
 .section-customer-reviews {
-  padding-top: 295px;
+  padding-top: 178px;
 }
 @media screen and (min-width: 768px) {
   .section-customer-reviews {
