--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -28,11 +28,18 @@
     display: flex;}
 }
 
-.about__topic{
+.about__topic {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 32px;
+    
+    @media screen and (min-width: 768px) {
+        margin-bottom: 72px;}
+
+    @media screen and (min-width: 1200px) {
+    margin-bottom: 82px;}
 }
 
 .about__label {
@@ -64,8 +71,6 @@
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: getColor(primary-light);
-    
-    margin-bottom: 32px;
 
     @media screen and (max-width: 767px) {
     width: 200px;}
@@ -76,14 +81,11 @@
     line-height: 1.26;  
     letter-spacing: 0.06em;  
 
-    margin-bottom: 72px;
     }
         @media screen and (min-width: 1200px) {
      
     font-size: 36px;
     line-height: 1.25;
-
-    margin-bottom: 82px;
     }
 }
 
@@ -245,6 +247,11 @@
     border: getBorder(button-active);
     fill: getColor(primary-white);
 }
+
+.about__btn:hover,
+.about__btn:focus {
+    transition: 250ms linear;
+  }
 
 .about__btn--text {
     font-weight: 600;
