--- a/src/partials/customer.html
+++ b/src/partials/customer.html
@@ -1,50 +1,68 @@
 <section class="customers">
-    <div class="container">
-        <h2 class="visually-hidden">Customer revievs</h2>
-        <!-- Swiper -->
-        <div class="customers__swiper">
-            <div class="swiper mySwiper">
-                <div class="swiper-wrapper swiper-content ">
-                    <div class="swiper-slide swiper__item">
-                        <img class="swiper-image" srcset="
-                                ./images/cast-rev/lady/lady_85.jpg 85w,
-                                ./images/cast-rev/lady/lady_170.jpg 170w
-                                " 
-                                sizes="(min-width: 1200px) 85px, (min-width: 768px) 85px, (min-width: 320px) 85px, 100vw"
-                                src="./images/cast-rev/lady/lady_85.jpg" alt="lady">
+  <div class="container">
+    <h2 class="visually-hidden">Customer revievs</h2>
+    <!-- Swiper -->
+    <div class="customers__swiper">
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper swiper-content">
+          <div class="swiper-slide swiper__item">
+            <img
+              class="swiper-image"
+              srcset="
+                ./images/cast-rev/lady/lady-85.jpg     85w,
+                ./images/cast-rev/lady/lady-85@2x.jpg 170w
+              "
+              sizes="(min-width: 1200px) 85px, (min-width: 768px) 85px, (min-width: 320px) 85px, 100vw"
+              src="./images/cast-rev/lady/lady-85.jpg"
+              alt="lady"
+            />
 
-                        <p class="swiper-text">I love visiting your cafe.
-                            You prepare the most delicious ice cream in Los Angeles!
-                            In addition, you have beautiful serving, cozy atmosphere and polite staff.</p>
-                        <span class="swiper-location">Emily, Los Angeles</span>
-                    </div>
-                    <div class="swiper-slide swiper__item">
-                        <img class="swiper-image"
-                            srcset="./images/cast-rev/Black-man/black-man_97.jpg 97w, ./images/cast-rev/Black-man/black-man_194.jpg 194w"
-                            sizes="(min-width: 1200px) 85px, (min-width: 768px) 85px, (min-width: 320px) 85px, 100vw"
-                            src="./images/cast-rev/Black-man/black-man_97.jpg" alt="black man">
-                        <p class="swiper-text">Every day we come to you with friends after classes in college. We love
-                            your ice cream and casual atmosphere!</p>
-                        <span class="swiper-location">Bryan, New-York</span>
-                    </div>
-                    <div class="swiper-slide swiper__item">
-                        <img class="swiper-image" srcset="
-                                ./images/cast-rev/fun-girl/fun-girl_91.jpg 91w,
-                                ./images/cast-rev/fun-girl/fun-girl_182.jpg 194w
-                                " 
-                                sizes="(min-width: 1200px) 85px, (min-width: 768px) 85px, (min-width: 320px) 85px, 100vw" 
-                                src="./images/cast-rev/fun-girl/fun-girl_91.jpg"
-                            alt="fun girl">
-                        <p class="swiper-text">Ice cream is my passion! I love your chocolate hazelnut ice cream! And I
-                            really like
-                            the excellent service - always
-                            served politely and quickly!</p>
-                        <span class="swiper-location">Diana, Chicago</span>
-                    </div>
-                </div>
-                <div class="swiper-pagination"></div>
-            </div>
+            <p class="swiper-text">
+              I love visiting your cafe. You prepare the most delicious ice
+              cream in Los Angeles! In addition, you have beautiful serving,
+              cozy atmosphere and polite staff.
+            </p>
+            <span class="swiper-location">Emily, Los Angeles</span>
+          </div>
+          <div class="swiper-slide swiper__item">
+            <img
+              class="swiper-image"
+              srcset="
+                ./images/cast-rev/black-man/black-man-85.jpg     97w,
+                ./images/cast-rev/black-man/black-man-85@2x.jpg 194w
+              "
+              sizes="(min-width: 1200px) 85px, (min-width: 768px) 85px, (min-width: 320px) 85px, 100vw"
+              src="./images/cast-rev/black-man/black-man-85.jpg"
+              alt="black man"
+            />
+            <p class="swiper-text">
+              Every day we come to you with friends after classes in college. We
+              love your ice cream and casual atmosphere!
+            </p>
+            <span class="swiper-location">Bryan, New-York</span>
+          </div>
+          <div class="swiper-slide swiper__item">
+            <img
+              class="swiper-image"
+              srcset="
+                ./images/cast-rev/fun-girl/fun-girl-85.jpg     91w,
+                ./images/cast-rev/fun-girl/fun-girl-85@2x.jpg 194w
+              "
+              sizes="(min-width: 1200px) 85px, (min-width: 768px) 85px, (min-width: 320px) 85px, 100vw"
+              src="./images/cast-rev/fun-girl/fun-girl-85.jpg"
+              alt="fun girl"
+            />
+            <p class="swiper-text">
+              Ice cream is my passion! I love your chocolate hazelnut ice cream!
+              And I really like the excellent service - always served politely
+              and quickly!
+            </p>
+            <span class="swiper-location">Diana, Chicago</span>
+          </div>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+        <div class="swiper-pagination"></div>
+      </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+  </div>
 </section>
