--- a/src/sass/components/_backdrop-modal.scss
+++ b/src/sass/components/_backdrop-modal.scss
@@ -21,6 +21,8 @@
   transform: translate(-50%, -50%);
   z-index: 1000;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  // overflow-y: scroll;
+  // max-height: 95%;
 }
 
 .modal.active,
